# AntGod

./: .gitignore  CMakeLists.txt  README.md  main.cpp
gameClasses/: Ant.cpp  Ant.h
neuralengine/: Activation.cpp  Activation.h  Layer.cpp  Layer.h  NEAT_Network.cpp  NEAT_Network.h  Network.cpp  Network.h
worldengine/: Ant.cpp  Ant.h  Graph.cpp  Graph.h  Line.cpp  Line.h  LineIntersection.h  Lines.cpp  Lines.h  NeuroBox.cpp  NeuroBox.h  Population.cpp  Population.h  PopulationBuilder.cpp  PopulationBuilder.h  TextureCollection.cpp  TextureCollection.h  Textures.cpp  Textures.h  World.cpp  World.h
worldengine/UI/: ColorEditBox.cpp  ColorEditBox.h  EvolutionEditBox.cpp  EvolutionEditBox.h  Graph.cpp  Graph.h  InfoBox.h  NeuroBox.cpp  NeuroBox.h  RaysEditBox.cpp  RaysEditBox.h  TextureCollection.cpp  TextureCollection.h
